# lansen

./: .gitignore  Cargo.toml  README.md  Rocket.toml  lansen.toml
db/sqlx/migrations/: 20250710063418_create-contact.sql  20250710063457_create-quote.sql
lansen/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
lansen/src/: App.vue  main.ts
lansen/src/assets/: base.css
lansen/src/components/: Contact.vue  Foot.vue  GoForm.vue  HelloWorld.vue  Inquirer.vue  Menu.vue  MenuIcon.vue
lansen/src/components/icons/: menu.ts
lansen/src/router/: index.ts
lansen/src/views/: AboutView.vue  ContactView.vue  DirectionsView.vue  HomeView.vue  InjectView.vue  MoldView.vue  PlaqueView.vue  QuoteView.vue  SpecimenView.vue
mail_lansen/: Cargo.toml
mail_lansen/src/: main.rs
model/: Cargo.toml
model/db/sqlx/: db.sqlite
model/src/: PendSend.rs  lib.rs
src/: contact.rs  mail.rs  main.rs  model.rs  moldspec.rs  tests.rs
