[package]
name = "lansen"
version = "0.1.0"
edition = "2021"
authors = ["Adam Hartline <adam.hartline@gmail.com>"]
publish = false

[dependencies]
mail_lansen = { path = "mail_lansen" }
model = { path = "model" }
lettre = { workspace = true }
rocket = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
rocket_db_pools = { workspace = true }

[workspace]
members = ["model"]

[workspace.dependencies]
lettre = "0.11.17"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.219"

[workspace.dependencies.sqlx]
version = "0.7.4"
default-features = false
features = ["macros", "migrate"]

[workspace.dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]

